--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "api": "tsc --project ./api/tsconfig.json && node ./api/server.js",
     "dev": "vite --port 3000",
     "build": "tsc && vite build",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,tsx --fix",
     "preview": "vite preview --port 3000",
-    "test": "vitest --run",
+    "test": "vitest run",
     "test:ci": "vitest run --coverage",
     "test:ui": "vitest --ui --coverage",
     "prepare": "husky install"
   },
   "dependencies": {
+    "fastify": "^4.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.1"
