--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "api": "tsc --project ./api/tsconfig.json && node ./api/server.js",
-    "dev": "vite --port 3000",
+    "api": "tnode api/server.ts",
+    "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint src --ext ts,tsx --fix",
-    "preview": "vite preview --port 3000",
+    "lint": "eslint src api --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "npm run lint -- --fix",
+    "preview": "vite preview",
     "test": "vitest run",
     "test:ci": "vitest run --coverage",
     "test:ui": "vitest --ui --coverage",
@@ -17,11 +17,13 @@
   },
   "dependencies": {
     "fastify": "^4.22.2",
+    "lowdb": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^6.0.1"
   },
   "devDependencies": {
+    "@arnaud-barre/tnode": "^0.19.1",
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
@@ -30,11 +32,11 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "@vitest/coverage-v8": "^0.32.2",
     "@vitest/ui": "^0.32.2",
-    "eslint": "^8.38.0",
+    "eslint": "^8.50.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "happy-dom": "^12.2.1",
     "husky": "^8.0.0",
-    "jsdom": "^22.1.0",
     "lint-staged": "^13.2.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
