--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "api": "tnode api/server.ts",
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:api": "echo 'Comming...'",
     "lint": "eslint src api --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "npm run lint -- --fix",
     "preview": "vite preview",
