--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@radix-ui/themes": "^1.1.2",
     "fastify": "^4.22.2",
     "lowdb": "^6.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
     "styled-components": "^6.0.1"
   },
   "devDependencies": {
@@ -28,8 +30,8 @@
     "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.59.0",
-    "@typescript-eslint/parser": "^5.59.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.3",
+    "@typescript-eslint/parser": "^6.7.3",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "@vitest/coverage-v8": "^0.32.2",
     "@vitest/ui": "^0.32.2",
