--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@fastify/cors": "^8.4.0",
+    "@fastify/jwt": "^7.2.1",
+    "@fastify/type-provider-typebox": "^3.5.0",
     "@radix-ui/themes": "^1.1.2",
+    "@sinclair/typebox": "^0.31.17",
     "fastify": "^4.22.2",
     "lowdb": "^6.0.1",
     "react": "^18.2.0",
