Initial monorepo setup

--- a/api/tsconfig.prod.json
+++ b/api/tsconfig.prod.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     /* Target node 16 */
-    "module": "ESNext",
+    "module": "CommonJS",
     "lib": ["ES2021", "DOM"],
     // "target": "ES2021",
     "skipLibCheck": true,
@@ -10,7 +10,7 @@
     /* Transpile with esbuild */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
-    "noEmit": true,
+    // "noEmit": true,
     "isolatedModules": true,
     "resolveJsonModule": true,
 
