--- a/package.json
+++ b/package.json
@@ -1,52 +1,31 @@
 {
   "name": "react-vitest-msw",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "api": "tnode api/server.ts",
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "build:api": "echo 'Comming...'",
-    "lint": "eslint src api --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint  --ext ts,tsx",
     "lint:fix": "npm run lint -- --fix",
-    "preview": "vite preview",
-    "test": "vitest run",
-    "test:ci": "vitest run --coverage",
-    "test:ui": "vitest --ui --coverage",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "@fastify/cors": "^8.4.0",
-    "@fastify/jwt": "^7.2.1",
-    "@fastify/type-provider-typebox": "^3.5.0",
-    "@radix-ui/themes": "^1.1.2",
-    "@sinclair/typebox": "^0.31.17",
-    "fastify": "^4.22.2",
-    "lowdb": "^6.0.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.16.0",
-    "styled-components": "^6.0.1"
+  "repository": {
+    "type": "git",
+    "url": "git@abrahamgr:abrahamgr/react-vitest-msw.git"
   },
+  "packageManager": "pnpm",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "@arnaud-barre/tnode": "^0.19.1",
-    "@testing-library/react": "^14.0.0",
-    "@types/react": "^18.0.37",
-    "@types/react-dom": "^18.0.11",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "@vitest/coverage-v8": "^0.32.2",
-    "@vitest/ui": "^0.32.2",
-    "eslint": "^8.50.0",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "eslint": "^8.51.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.3.4",
-    "happy-dom": "^12.2.1",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.2.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.3.9"
+    "eslint-plugin-react-refresh": "^0.4.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.1",
+    "typescript": "5.2.2"
   },
   "lint-staged": {
     "*.{ts,tsx}": "npm run lint:fix"
