--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon --exec tnode index.ts",
+    "dev": "nodemon --exec tsx index.ts",
     "build": "tsc -p tsconfig.prod.json",
     "lint": "eslint  --ext ts,tsx",
     "lint:fix": "npm run lint -- --fix",
@@ -17,11 +17,11 @@
   "devDependencies": {
     "eslint": "^8.51.0",
     "nodemon": "^3.0.1",
-    "typescript": "5.0.2",
+    "tsx": "^3.13.0",
+    "typescript": "5.2.2",
     "vitest": "^0.34.6"
   },
   "dependencies": {
-    "@arnaud-barre/tnode": "^0.19.2",
     "@fastify/cors": "^8.4.0",
     "@fastify/jwt": "^7.2.1",
     "@fastify/type-provider-typebox": "^3.5.0",
