--- a/api/package.json
+++ b/api/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
+  "type": "module",
   "scripts": {
     "dev": "nodemon --exec tsx index.ts",
     "build": "tsc -p tsconfig.prod.json",
@@ -15,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "eslint": "^8.51.0",
     "nodemon": "^3.0.1",
     "tsx": "^3.13.0",
@@ -26,6 +28,7 @@
     "@fastify/jwt": "^7.2.1",
     "@fastify/type-provider-typebox": "^3.5.0",
     "@sinclair/typebox": "^0.31.17",
+    "bcrypt": "^5.1.1",
     "fastify": "^4.23.2",
     "lowdb": "^6.0.1"
   }
