--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "@fastify/type-provider-typebox": "^3.5.0",
     "@sinclair/typebox": "^0.31.17",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.3.1",
     "fastify": "^4.23.2",
     "lowdb": "^6.0.1"
   }
